[package]
name = "huawei_ont_exporter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "tracing-log"] }
lazy_static = "1.5.0"
log = "0.4.25"
prometheus = "0.14.0"
regex = "1.11.1"
reqwest = { version = "0.13.0", features = ["cookies", "json"] }
scraper = "0.25.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
base64 = "0.22.1"
